added box shadow

--- a/t141-css-basics/box-messages/css/style.css
+++ b/t141-css-basics/box-messages/css/style.css
@@ -18,6 +18,7 @@
     line-height: 75px;
     background-repeat: no-repeat;
     background-position: 21.5px;
+    box-shadow: 1px 1px 5px #EEE;
 }
 
 .info {
